--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
 </head>
 <body>
     <h1>Header</h1>
+
+    <p></p>
+    <p></p>
+    <p></p>
+
+    <ul>
+        <lu>content</lu>
+        <lu>content</lu>
+        <lu>content</lu>
+        <lu>content</lu>
+    </ul>
+
+
 </body>
 </html>
